add javascript animation

--- a/index.html
+++ b/index.html
@@ -33,5 +33,6 @@
   <div class="attribution">
     Coded by <a href="#">Aissvm .</a>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
