add flex navigation bar using html and flexbox in css

--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/e5345cd81b.js" crossorigin="anonymous"></script> 
   <link rel="icon" type="image/png" sizes="32x32" href="images/hive-brands.svg">
   <link rel="stylesheet" href="style.css"></link>
   <title>NFT preview card component</title>
 </head>
 <body>
+	<div class="nav_bar">
+		<ul class="element">
+			<li><a href="#">Home</a></li>
+			<li><a href="#">Gallery</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
+	</div>
 	<div class="card">
 	<div class="card_content">
 		<img class="nft_image" src="images/monkey.jpeg">
