--- a/index.html
+++ b/index.html
@@ -58,13 +58,6 @@
       <div class="swiper-button-prev"></div>
     </div>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script>
-      var swiper = new Swiper(".mySwiper", {
-        navigation: {
-          nextEl: ".swiper-button-next",
-          prevEl: ".swiper-button-prev",
-        },
-      });
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
