--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
       <div class="swiper-button-next"></div>
       <div class="swiper-button-prev"></div>
     </div>
+	<script src="CardEffect.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="CardDuplicate.js"></script>
   </body>
 </html>
