(chore) fix some bugs : add image alternative text

--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="https://kit.fontawesome.com/e5345cd81b.js" crossorigin="anonymous"></script> 
-	<link rel="icon" type="image/png" sizes="32x32" href="images/hive-brands.svg">
-	<link rel="stylesheet" href="style.css"></link>
-	<title>NFT preview card component</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
-  </head>
+<main>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<script src="https://kit.fontawesome.com/e5345cd81b.js" crossorigin="anonymous"></script> 
+		<link rel="icon" type="image/png" sizes="32x32" href="images/hive-brands.svg">
+		<link rel="stylesheet" href="style.css"></link>
+		<title>NFT preview card component</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1"/>
+		<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+		<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
+	</head>
+</main>  
   <body>
 	  <nav>
 		<div class="nav_bar">
@@ -25,7 +28,7 @@
         <div class="swiper-slide">
 			<div class="card">
 				<div class="card_content">
-					<img class="nft_image" src="images/monkey.jpeg">
+					<img alt="nft image" class="nft_image" src="images/monkey.jpeg">
 					<div class="nft_title"><h2>Bored Ape Yacht Club #320</h2></div>
 					<div class="collection"></h2>The Bored Ape Yacht Club is a collection of 10,000 unique Bored Ape NFTs unique digital collectibles living on the Ethereum blockchain</h2></div>
 					<div class="price_time">
@@ -40,7 +43,7 @@
 					</div>
 					<div class="owner_container">
 						<div class="owner"></h4>Owned by <a href="https://opensea.io/BetOnline_ag" target="_blank" >BetOnline_ag</a></h4></div> <!-- link_name -->
-						<img class="owenr_image" src="images/image-avatar.png">
+						<img alt="Owner image" class="owenr_image" src="images/image-avatar.png">
 					</div>
 				</div>
 				</div>
@@ -50,7 +53,6 @@
       <div class="swiper-button-prev"></div>
     </div>
 	<script src="CardEffect.js"></script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="CardDuplicate.js"></script>
   </body>
 </html>
